@@ -13,6 +13,7 @@ rules-edit: filter 'is.unused.fast' extend for nat rules
 address-edit: new filter 'description regex'
 address-edit: new field in exportToExcel : 'resolveip'
 service-edit: new filter 'description regex'
+generic: new filters 'location regex'
 
 bugfix:
 - help message was not available in override-finder.php
